force-app/main/default/objects/Account/fields/Agency_Loc_CD__c.field-meta.xml
<CustomField>
    <fullName>Agency_Loc_CD__c</fullName>
    <inlineHelpText>Agency Location Code</inlineHelpText>
    <label>Agency Loc CD</label>
    <length>7</length>
    <type>Text</type>
</CustomField>