force-app/main/default/objects/Account/fields/BMI_Client_Name__c.field-meta.xml
<CustomField>
    <fullName>BMI_Client_Name__c</fullName>
    <externalId>true</externalId>
    <label>BMI Client Name</label>
    <length>24</length>
    <type>Text</type>
</CustomField>