force-app/main/default/objects/Account/fields/BMI_Client_Type__c.field-meta.xml
<CustomField>
    <fullName>BMI_Client_Type__c</fullName>
    <label>BMI Client Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(A) Association</fullName>
            </value>
            <value>
                <fullName>(CG) Comm Gov</fullName>
            </value>
            <value>
                <fullName>(FG) Federal Gov</fullName>
            </value>
            <value>
                <fullName>(I) Commercial</fullName>
            </value>
            <value>
                <fullName>(I) Int&apos;l Commercial</fullName>
            </value>
            <value>
                <fullName>(IG) Comm Comm</fullName>
            </value>
            <value>
                <fullName>(IG) Intl Gov</fullName>
            </value>
            <value>
                <fullName>(LG) St/Local Gov</fullName>
            </value>
            <value>
                <fullName>(NA) IR+D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>