force-app/main/default/objects/Account/fields/Client_Code__c.field-meta.xml
<CustomField>
    <fullName>Client_Code__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <label>Client Code</label>
    <type>AutoNumber</type>
</CustomField>