force-app/main/default/objects/Account/fields/Legacy_Client_Code__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Client_Code__c</fullName>
    <description>As an Admin, I need to have a field to store client codes from legacy systems so that we are accurately tracking historical information.</description>
    <externalId>true</externalId>
    <label>Legacy Client Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>