force-app/main/default/objects/Account/fields/Market_Sector_Title__c.field-meta.xml
<CustomField>
    <fullName>Market_Sector_Title__c</fullName>
    <label>Market Sector Title</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sector__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Market_Sector_Title</valueSetName>
    </valueSet>
</CustomField>