force-app/main/default/objects/Account/fields/OPI__c.field-meta.xml
<CustomField>
    <fullName>OPI__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Other Party Indicator</inlineHelpText>
    <label>OPI</label>
    <length>4</length>
    <type>Text</type>
</CustomField>