force-app/main/default/objects/Account/fields/PNNL_Contract_Sponsor_Code__c.field-meta.xml
<CustomField>
    <fullName>PNNL_Contract_Sponsor_Code__c</fullName>
    <label>Contract Sponsor Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>