force-app/main/default/objects/Account/fields/PNNL_Participants__c.field-meta.xml
<CustomField>
    <fullName>PNNL_Participants__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participants</label>
    <referenceTo>CRADA__c</referenceTo>
    <relationshipLabel>Participants</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>