force-app/main/default/objects/Account/fields/Project_Management_Office__c.field-meta.xml
<CustomField>
    <fullName>Project_Management_Office__c</fullName>
    <label>Project Management Office</label>
    <length>32</length>
    <type>Text</type>
</CustomField>