force-app/main/default/objects/Account/recordTypes/PCAS_Sponsors.recordType-meta.xml
<RecordType>
    <fullName>PCAS_Sponsors</fullName>
    <active>true</active>
    <label>PCAS Sponsors</label>
</RecordType>